CSS fixes firefox specific issues, namely scrollbar

--- a/extension/UI/public/style.css
+++ b/extension/UI/public/style.css
@@ -535,7 +535,7 @@ body {
 }
 
 .noticeBoard {
-  min-width: calc(100vw - 160px);
+  min-width: calc(100vw - 170px);
   min-height: 77vh;
   border: 1px solid #dee2e6;
   margin: 20px;
@@ -548,7 +548,7 @@ body {
 .statusBoard {
   box-shadow: 0px 3px 15px -1px;
   overflow-y: scroll;	
-  min-width: calc(100vw - 160px);
+  min-width: calc(100vw - 170px);
   min-height: 77vh;
   border: 1px solid #dee2e6;
   text-align: center;
@@ -602,7 +602,7 @@ body {
   box-shadow: 2px 2px 3px 2px rgba(0,0,0,0.12);
   cursor: alias;
   display: grid;
-  min-width: 21vw;
+  max-width: 21vw;
   grid-template-columns: 1fr;
   grid-template-rows: 200px 3fr 1fr;
   grid-column-gap: 6px;
@@ -644,7 +644,7 @@ body {
 .articles {
   overflow-y: scroll;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(21vw, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20.3vw, 1fr));
   grid-template-rows: auto;
   grid-gap: 30px;
   padding: 30px;
